# era_localization

./: Dockerfile  first_run.sh
src/src/localization/src/: pipeline.cpp
src1/src/arena_description/: CMakeLists.txt  arena.urdf  package.xml
src1/src/arena_description/launch/: robot_description.launch.py
src1/src/arena_description/urdf/: arena.trans  arena.xacro  materials.xacro
src1/src/era_bot/: CMakeLists.txt  package.xml
src1/src/era_bot/description/: camera.xacro  camera1.xacro  camera2.xacro  camera3.xacro  robot.urdf.xacro  robot_core.xacro
src1/src/era_bot/launch/: launch_sim.launch.py  rsp.launch.py
src1/src/era_bot/worlds/: era_arena.world  era_football.world
src1/src/my_nodes/: CMakeLists.txt  package.xml
src1/src/my_nodes/src/: my_subscriber_node.cpp  odom_subscriber_node.cpp  point_cloud_transformer_node.cpp
src2/src/binary_map_sub/: package.xml  setup.cfg  setup.py
src2/src/binary_map_sub/binary_map_sub/: binary_map_listener.py  floor_map.py
